--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -1,6 +1,18 @@
 add_executable(${LIGHT_YEARS_GAME_TARGET_NAME} 
+	${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/BulletShooter.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/BulletShooter.cpp
+
 	${CMAKE_CURRENT_SOURCE_DIR}/include/gameFramework/GameApplication.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/gameFramework/GameApplication.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/Shooter.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/Shooter.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/spaceship/Spaceship_Base.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/spaceship/Spaceship_Base.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/player/PlayerSpaceship.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerSpaceship.cpp
 
 )
 
