--- a/LightYearsEngine/CmakeLists.txt
+++ b/LightYearsEngine/CmakeLists.txt
@@ -1,4 +1,7 @@
 add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
+	${CMAKE_CURRENT_SOURCE_DIR}/include/actorComponents/HealthComponent.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/actorComponents/HealthComponent.cpp
+
 	${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Actor.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Actor.cpp
 
@@ -52,7 +55,7 @@ set(BOX2D_LIB_NAME Box2D)
 FetchContent_Declare(
 	${BOX2D_LIB_NAME}
 	GIT_REPOSITORY https://github.com/erincatto/box2d
-	GIT_TAG v3.0.0
+	GIT_TAG v2.4.1
 	GIT_SHALLOW FALSE
 )
 
