--- a/LightYearsEngine/CmakeLists.txt
+++ b/LightYearsEngine/CmakeLists.txt
@@ -14,6 +14,9 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
 	${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Core.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Core.cpp
 
+	${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Delegate.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Delegate.cpp
+
 	${CMAKE_CURRENT_SOURCE_DIR}/include/EntryPoint.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/EntryPoint.cpp
 
@@ -28,6 +31,9 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
 
 	${CMAKE_CURRENT_SOURCE_DIR}/include/framework/World.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/framework/World.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/VFX/Particle.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/VFX/Particle.cpp
 )
 
 target_include_directories(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC
