--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -15,8 +15,10 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
 	${CMAKE_CURRENT_SOURCE_DIR}/src/spaceship/Spaceship_Base.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/include/player/PlayerSpaceship.h
-	${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerSpaceship.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerSpaceship.cpp  
 
+	${CMAKE_CURRENT_SOURCE_DIR}/include/VFX/Explosion.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/VFX/Explosion.cpp  
 )
 
 target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC
