--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -1,13 +1,21 @@
-add_executable(${LIGHT_YEARS_GAME_TARGET_NAME} 
+add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
+	${CMAKE_CURRENT_SOURCE_DIR}/include/enemy/Enemy_Base.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/enemy/Enemy_Base.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/enemy/Enemy_Vanguard.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/enemy/Enemy_Vanguard.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/gameFramework/GameApplication.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/gameFramework/GameApplication.cpp 
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/levels/LevelOne.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/levels/LevelOne.cpp 
+
 	${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/Bullet.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/Bullet.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/BulletShooter.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/BulletShooter.cpp
-
-	${CMAKE_CURRENT_SOURCE_DIR}/include/gameFramework/GameApplication.h
-	${CMAKE_CURRENT_SOURCE_DIR}/src/gameFramework/GameApplication.cpp
-
 	${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/Shooter.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/Shooter.cpp
 
